Layout Issues

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,7 +4,7 @@
 .home {
   display: grid;
   gap: 2px;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(70px, auto);
   grid-auto-flow: dense;
 
@@ -35,7 +35,7 @@
 
   .box4 {
     grid-column: span 1;
-    grid-row: span 3;
+    grid-row: span 2;
   }
 
   .box7 {
